--- a/index.html
+++ b/index.html
@@ -6,8 +6,8 @@
     <title>AGRICULTURA SUSTENTÁVEL</title>
     <link rel="stylesheet" href="style.css">
 </head>
-<body>
-    <h1>AGRICULTURA SUSTENTÁVEL</h1>
-    <a href="index.html"
+<body class="corpo">
+    <h1 class="titulo">AGRICULTURA SUSTENTÁVEL</h1>
+    <a class="pagina" href="index.html"> introdução</a>
 </body>
 </html>
