--- a/inicio.html
+++ b/inicio.html
@@ -6,7 +6,12 @@
     <title>AGRICULTURA SUSTENTÁVEL</title>
     <link rel="stylesheet" href="inicio.css">
 </head>
-<body>
+<body class="corpo">
+
+    <h1 class="titulo"> DO QUE SE TRATA A AGRICULTURA SUSTENTÁVEL? </h1>
+    <p class="paragrafo">A agricultura sustentável é um conceito e prática que visa produzir alimentos, fibras, combustíveis e outros produtos agrícolas de maneira que sejam ecologicamente corretos, economicamente viáveis e socialmente responsáveis. O objetivo central é atender às necessidades atuais sem comprometer a capacidade das futuras gerações de atenderem às suas próprias necessidades</p>
+
+
 
 </body>
 </html>
