--- a/index.html
+++ b/index.html
@@ -8,6 +8,6 @@
 </head>
 <body class="corpo">
     <h1 class="titulo">AGRICULTURA SUSTENTÁVEL</h1>
-    <a class="pagina" href="index.html"> introdução</a>
+    <a class="pagina" href="inicio.html"> introdução</a>
 </body>
 </html>
