--- a/index.html
+++ b/index.html
@@ -7,7 +7,11 @@
     <link rel="stylesheet" href="style.css">
 </head>
 <body class="corpo">
+    <section>
     <h1 class="titulo">AGRICULTURA SUSTENTÁVEL</h1>
-    <a class="pagina" href="inicio.html"> introdução</a>
+    <ul>
+        <li class="pagina"> <a href="inicio.html"> introdução</a></li>
+   </ul>
+</section>
 </body>
 </html>
