--- a/inicio.html
+++ b/inicio.html
@@ -9,8 +9,8 @@
 <body class="corpo">
 
     <h1 class="titulo"> DO QUE SE TRATA A AGRICULTURA SUSTENTÁVEL? </h1>
-    <p class="paragrafo">A agricultura sustentável é um conceito e prática que visa produzir alimentos, fibras, combustíveis e outros produtos agrícolas de maneira que sejam ecologicamente corretos, economicamente viáveis e socialmente responsáveis. O objetivo central é atender às necessidades atuais sem comprometer a capacidade das futuras gerações de atenderem às suas próprias necessidades</p>
-
+    <p class="paragrafo">A agricultura sustentável é um conceito e prática que visa produzir alimentos, fibras, combustíveis e outros produtos agrícolas de maneira que sejam ecologicamente corretos, economicamente viáveis e socialmente responsáveis. O objetivo central é atender às necessidades atuais sem comprometer a capacidade das futuras gerações de atenderem às suas próprias necessidades.</p>
+   <h2 class="subtitulo">principais aspectos e objetivos da agricultura sustentável:</h2>
 
 
 </body>
