--- a/index.html
+++ b/index.html
@@ -10,7 +10,10 @@
     <section>
     <h1 class="titulo">AGRICULTURA SUSTENTÁVEL</h1>
     <ul>
-        <li class="pagina"> <a href="inicio.html"> introdução</a></li>
+        <li class="paginas"> <a href="inicio.html"> introdução</a></li>
+        <li class="paginas"> <a href="vantagens.html"> vantagens e desvantagens </a></li>
+        <li class="paginas"> <a href="tecnologia.html"> tecnologia e agricultura </a></li>
+        <li class="paginas"> <a href="sugestoes.html"> sugestões </a></li>
    </ul>
 </section>
 </body>
