--- a/tecnologia.html
+++ b/tecnologia.html
@@ -6,7 +6,7 @@
     <title>AGRICULTURA SUSTENTÁVEL</title>
     <link rel="stylesheet" href="tecnologia.css">
 </head>
-<body>
+<body class="corpo">
 
 </body>
 </html>
