--- a/vantagens.html
+++ b/vantagens.html
@@ -8,5 +8,10 @@
 </head>
 <body class="corpo">
 
+    <h1 class="titulo"> VANTAGENS E DESVANTAGENS </h1>
+    <p class="paragrafo">A agricultura sustentável tem muitas vantagens, mas existem muitas desvantagens também.</p>
+    
+   <h2 class="subtitulo">VANTAGENS:</h2>
+
 </body>
 </html>
