--- a/vantagens.html
+++ b/vantagens.html
@@ -10,8 +10,10 @@
 
     <h1 class="titulo"> VANTAGENS E DESVANTAGENS </h1>
     <p class="paragrafo">A agricultura sustentável tem muitas vantagens, mas existem muitas desvantagens também.</p>
-    
+
    <h2 class="subtitulo">VANTAGENS:</h2>
+   <p>qawsedrfghjkl</p>
+   <h2 class="subtitulo">DESVANTAGENS:</h2>
 
 </body>
 </html>
