--- a/tecnologia.html
+++ b/tecnologia.html
@@ -8,5 +8,10 @@
 </head>
 <body class="corpo">
 
+    <h1 class="titulo"> TECNOLOGIA E AGRICULTURA </h1>
+    <p class="paragrafo">A agricultura vem se revolucionando nos últimos anos, com muitas máuinas e tecnologias envolvidas, dentre elas:</p>
+  
+    <h2 class="subtitulo">NOVAS TECNOLOGIAS NA AGRICULTURA:</h2>
+
 </body>
 </html>
