--- a/vantagens.html
+++ b/vantagens.html
@@ -12,7 +12,17 @@
     <p class="paragrafo">A agricultura sustentável tem muitas vantagens, mas existem muitas desvantagens também.</p>
 
    <h2 class="subtitulo">VANTAGENS:</h2>
-   <p>qawsedrfghjkl</p>
+   <ul>
+    <li> Redução do uso de produtos químicos e agrotóxicos:
+    <p> Adoção de métodos orgânicos de controle de pragas, como o uso de insetos benéficos e armadilhas de feromônios, em vez de pesticidas sintéticos.</p></li>
+    
+    <li> Conservação do solo e da biodiversidade:
+    <p> Implementação de práticas como rotação de culturas, plantio direto e agroflorestas, que promovem a saúde do solo e habitats diversificados para a vida selvagem. </p></li>
+    
+    <li> </li>
+    <li> </li>
+   </ul>
+
    <h2 class="subtitulo">DESVANTAGENS:</h2>
 
 </body>
