--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
     <link rel="stylesheet" href="style.css">
 </head>
 <body class="corpo">
-    <section>
+    <header class="cabecalho">
     <h1 class="titulo">AGRICULTURA SUSTENTÁVEL</h1>
     <ul>
         <li class="paginas"> <a href="inicio.html"> introdução</a></li>
@@ -15,6 +15,6 @@
         <li class="paginas"> <a href="tecnologia.html"> tecnologia e agricultura </a></li>
         <li class="paginas"> <a href="sugestoes.html"> sugestões </a></li>
    </ul>
-</section>
+</header>
 </body>
 </html>
