--- a/index.html
+++ b/index.html
@@ -9,12 +9,16 @@
 <body class="corpo">
     <header class="cabecalho">
     <h1 class="titulo">AGRICULTURA SUSTENTÁVEL</h1>
-    <ul>
+    <div>
+    <ul class="lista">
         <li class="paginas"> <a href="inicio.html"> introdução</a></li>
         <li class="paginas"> <a href="vantagens.html"> vantagens e desvantagens </a></li>
         <li class="paginas"> <a href="tecnologia.html"> tecnologia e agricultura </a></li>
         <li class="paginas"> <a href="sugestoes.html"> sugestões </a></li>
-   </ul>
+   </ul> 
+</div>
 </header>
+
+
 </body>
 </html>
