--- a/index.html
+++ b/index.html
@@ -10,12 +10,12 @@
     <header class="cabecalho">
     <h1 class="titulo">AGRICULTURA SUSTENTÁVEL</h1>
     <div>
-    <ul class="lista">
+    <ol class="lista">
         <li class="paginas"> <a href="inicio.html"> introdução</a></li>
         <li class="paginas"> <a href="vantagens.html"> vantagens e desvantagens </a></li>
         <li class="paginas"> <a href="tecnologia.html"> tecnologia e agricultura </a></li>
         <li class="paginas"> <a href="sugestoes.html"> sugestões </a></li>
-   </ul> 
+   </ol> 
 </div>
 </header>
 
