--- a/index.html
+++ b/index.html
@@ -11,10 +11,10 @@
     <h1 class="titulo">AGRICULTURA SUSTENTÁVEL</h1>
     <div>
     <ul class="lista">
-        <li class="paginas"> <a href="inicio.html"> introdução</a></li>
-        <li class="paginas"> <a href="vantagens.html"> vantagens e desvantagens </a></li>
-        <li class="paginas"> <a href="tecnologia.html"> tecnologia e agricultura </a></li>
-        <li class="paginas"> <a href="sugestoes.html"> sugestões </a></li>
+        <li class="paginas"> <a href="#inicio.html"> introdução</a></li>
+        <li class="paginas"> <a href="#vantagens.html"> vantagens e desvantagens </a></li>
+        <li class="paginas"> <a href="#tecnologia.html"> tecnologia e agricultura </a></li>
+        <li class="paginas"> <a href="#sugestoes.html"> sugestões </a></li>
    </ul> 
 </div>
 </header>
