--- a/index.html
+++ b/index.html
@@ -9,8 +9,8 @@
 <body class="corpo">
     <header class="cabecalho">
     <h1 class="titulo">AGRICULTURA SUSTENTÁVEL</h1>
-    <div>
-    <ul class="lista">
+    <div class="lista">
+    <ul>
         <li class="paginas"> <a href="inicio.html"> introdução</a></li>
         <li class="paginas"> <a href="vantagens.html"> vantagens e desvantagens </a></li>
         <li class="paginas"> <a href="tecnologia.html"> tecnologia e agricultura </a></li>
