--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
     <title>AGRICULTURA SUSTENTÁVEL</title>
     <link rel="stylesheet" href="style.css">
 </head>
-<body class="corpo">
+<body class="corpo"
     <header class="cabecalho">
     <h1 class="titulo">AGRICULTURA SUSTENTÁVEL</h1>
     <div class="lista">
