--- a/index.html
+++ b/index.html
@@ -18,7 +18,7 @@
    </ul> 
 </div>
 </header>
-<img class="imagem" src="restinga.png">
+<center><img class="imagem" src="restinga.png"></center>
 
 </body>
 </html>
