--- a/index.html
+++ b/index.html
@@ -18,7 +18,8 @@
    </ul> 
 </div>
 </header>
-<center><img class="imagem" src="restinga.png"></center>
+<center><img class="imagem" src="restinga.png"></center> <br>
+<p> Foto registrada durante uma viagem para Lapa/PR - Quilombo de Restinga -</p>
 
 </body>
 </html>
