--- a/index.html
+++ b/index.html
@@ -18,8 +18,9 @@
    </ul> 
 </div>
 </header>
-<center><img class="imagem" src="restinga.png"></center> <br>
+<center><img class="imagem" src="restinga.png"> 
 <p> Foto registrada durante uma viagem para Lapa/PR - Quilombo de Restinga -</p>
+</center>
 
 </body>
 </html>
