--- a/index.html
+++ b/index.html
@@ -21,6 +21,7 @@
 <br><br><br>
 <center><img class="imagem" src="restinga.png"> 
 <p> Foto registrada durante uma viagem para Lapa/PR - Quilombo de Restinga -</p>
+<p> O território quilombola da Lapa conta com três comunidades: Feixo, Restinga e Vila Esperança, todas situadas na mesma região. A comunidade de Restinga é habitada por uma família que possui uma plantação de cerca de 1 hectare toda baseada em agricultura sustentável e orgânica. Grande parte de sua produção é destinada a escolas da região.</p>
 </center>
 
 </body>
