--- a/index.html
+++ b/index.html
@@ -20,9 +20,10 @@
 </header>
 <br><br><br>
 <center><img class="imagem" src="restinga.png"> 
-<p> Foto registrada durante uma viagem para Lapa/PR - Quilombo de Restinga -</p>
-<p> O território quilombola da Lapa conta com três comunidades: Feixo, Restinga e Vila Esperança, todas situadas na mesma região. A comunidade de Restinga é habitada por uma família que possui uma plantação de cerca de 1 hectare, toda baseada em agricultura sustentável e orgânica. Grande parte de sua produção é destinada a escolas da região, já a outra parte, é comercializada.</p>
-</center>
+
+<h2 class="titulo2"> Foto registrada durante uma viagem para Lapa/PR - Quilombo de Restinga -</h2>
+
+<p class="paragrafo">O território quilombola da Lapa é composto por três comunidades distintas: Feixo, Restinga e Vila Esperança, todas localizadas na mesma região. Em particular, a comunidade de Restinga se destaca pela sua plantação ser baseada na agricultura sustentável e orgânica. Uma família residente dessa comunidade possui uma plantação de aproximadamente 1 hectare, utilizando práticas agrícolas que respeitam o meio ambiente e promovem a saúde do solo. Além de garantir alimentos mais saudáveis e nutritivos para a família, uma parte significativa da produção é destinada às escolas da região.</p>
 
 </body>
 </html>
