--- a/index.html
+++ b/index.html
@@ -11,10 +11,11 @@
     <h1 class="titulo">AGRICULTURA SUSTENTÁVEL</h1>
     <div class="lista">
     <ul>
-        <li class="paginas"> <a class="item" href="inicio.html"> introdução</a></li>
+       
         <li class="paginas"> <a class="item" href="vantagens.html"> vantagens e desvantagens </a></li>
         <li class="paginas"> <a class="item" href="tecnologia.html"> tecnologia e agricultura </a></li>
         <li class="paginas"> <a class="item" href="sugestoes.html"> sugestões </a></li>
+        <li class="paginas"> <a class="item" href="inicio.html"> na prática</a></li>
    </ul> 
 </div>
 </header>
