--- a/inicio.html
+++ b/inicio.html
@@ -8,10 +8,12 @@
 </head>
 <body class="corpo">
 
-    <h1 class="titulo"> DO QUE SE TRATA A AGRICULTURA SUSTENTÁVEL? </h1>
-    <p class="paragrafo">A agricultura sustentável é um conceito e prática que visa produzir alimentos, fibras, combustíveis e outros produtos agrícolas de maneira que sejam ecologicamente corretos, economicamente viáveis e socialmente responsáveis. O objetivo central é atender às necessidades atuais sem comprometer a capacidade das futuras gerações de atenderem às suas próprias necessidades.</p>
-   <h2 class="subtitulo">principais aspectos e objetivos da agricultura sustentável:</h2>
+   <center><img class="imagem" src="restinga.png"> 
 
+    <h2 class="titulo2"> Foto registrada durante uma viagem para Lapa/PR - Quilombo de Restinga -</h2>
+    
+    <p class="paragrafo">O território quilombola da Lapa é composto por três comunidades distintas: Feixo, Restinga e Vila Esperança, todas localizadas na mesma região. Em particular, a comunidade de Restinga se destaca pela sua plantação ser baseada na agricultura sustentável e orgânica. Uma família residente dessa comunidade possui uma plantação de aproximadamente 1 hectare, utilizando práticas agrícolas que respeitam o meio ambiente e promovem a saúde do solo. Além de garantir alimentos mais saudáveis e nutritivos para a família, uma parte significativa da produção é destinada às escolas da região.</p>
+    
 
 </body>
 </html>
