--- a/index.html
+++ b/index.html
@@ -11,7 +11,6 @@
     <h1 class="titulo">AGRICULTURA SUSTENTÁVEL</h1>
     <div class="lista">
     <ul>
-       
         <li class="paginas"> <a class="item" href="vantagens.html"> vantagens e desvantagens </a></li>
         <li class="paginas"> <a class="item" href="tecnologia.html"> tecnologia e agricultura </a></li>
         <li class="paginas"> <a class="item" href="sugestoes.html"> sugestões </a></li>
@@ -19,10 +18,19 @@
    </ul> 
 </div>
 </header>
+
 <br><br><br>
-<h1 class="titulo"> DO QUE SE TRATA A AGRICULTURA SUSTENTÁVEL? </h1>
+<center><h2 class="titulo2"> DO QUE SE TRATA A AGRICULTURA SUSTENTÁVEL? </h2>
     <p class="paragrafo">A agricultura sustentável é um conceito e prática que visa produzir alimentos, fibras, combustíveis e outros produtos agrícolas de maneira que sejam ecologicamente corretos, economicamente viáveis e socialmente responsáveis. O objetivo central é atender às necessidades atuais sem comprometer a capacidade das futuras gerações de atenderem às suas próprias necessidades.</p>
-   <h2 class="subtitulo">principais aspectos e objetivos da agricultura sustentável:</h2>
+</center>
+
+    <h3 class="subtitulo">principais aspectos e objetivos da agricultura sustentável:</h3>
+    <ul class="lista-item">
+        <li class="item-lista"> </li>
+        <li class="item-lista"> </li>
+        <li class="item-lista"> </li>
+        <li class="item-lista"> </li>
+    </ul>
 
 </body>
 </html>
