--- a/index.html
+++ b/index.html
@@ -24,9 +24,9 @@
     <p class="paragrafo">A agricultura sustentável é um conceito e prática que visa produzir alimentos, fibras, combustíveis e outros produtos agrícolas de maneira que sejam ecologicamente corretos, economicamente viáveis e socialmente responsáveis. O objetivo central é atender às necessidades atuais sem comprometer a capacidade das futuras gerações de atenderem às suas próprias necessidades.</p>
 </center>
 
-    <h3 class="subtitulo">principais aspectos e objetivos da agricultura sustentável:</h3>
+    <h3 class="subtitulo">PRINCIPAIS ASPECTOS E OBJETIVOS DA AGRICULTURA SUSTENTÁVEL:</h3>
     <ul class="lista-item">
-        <li class="item-lista"> </li>
+        <li class="item-lista" class="item-lista2"> sustentabilidade </li>
         <li class="item-lista"> </li>
         <li class="item-lista"> </li>
         <li class="item-lista"> </li>
