--- a/inicio.html
+++ b/inicio.html
@@ -8,7 +8,7 @@
 </head>
 <body class="corpo">
 
-   <center><img class="imagem" src="restinga.png"> 
+   <center><img class="imagem" src="imagens/restinga.png"> 
 
     <h2 class="titulo2"> Foto registrada durante uma viagem para Lapa/PR - Quilombo de Restinga -</h2>
     
