--- a/index.html
+++ b/index.html
@@ -28,7 +28,7 @@
     <h3 class="subtitulo">PRINCIPAIS ASPECTOS E OBJETIVOS DA AGRICULTURA SUSTENTÁVEL:</h3>
     <ul class="lista-item">
         <li class="item-lista"> Desenvolvimento Rural: </li>
-        <li class="item-texto"> Estimular o cr5escimento e desenvolvimento econômico nas áreas rurais e apoiar a sustentabilidade de comunidades agrícolas. </li>4
+        <li class="item-texto"> Estimular o crescimento e desenvolvimento econômico nas áreas rurais e apoiar a sustentabilidade de comunidades agrícolas. </li>4
 
         <li class="item-lista"> Nutrição e Qualidade: </li>
         <li class="item-texto"> Proporcionar alimentos nutritivos e de maior qualidade para as populações.</li>
