--- a/index.html
+++ b/index.html
@@ -27,18 +27,19 @@
 
     <h3 class="subtitulo">PRINCIPAIS ASPECTOS E OBJETIVOS DA AGRICULTURA SUSTENTÁVEL:</h3>
     <ul class="lista-item">
-     <dark><li class="item-lista"> Desenvolvimento Rural: </li></dark>
+        <dark>
+     <li class="item-lista"> Desenvolvimento Rural: </li>
         <li class="item-texto"> Estimular o crescimento e desenvolvimento econômico nas áreas rurais e apoiar a sustentabilidade de comunidades agrícolas. </li>
 
-     <dark><li class="item-lista"> Nutrição e Qualidade: </li></dark>
+     <li class="item-lista"> Nutrição e Qualidade: </li>
         <li class="item-texto"> Proporcionar alimentos nutritivos e de maior qualidade para as populações.</li>
 
-     <dark><li class="item-lista">Mitigação de Emissões: </li></dark>
+     <li class="item-lista">Mitigação de Emissões: </li>
         <li class="item-texto"> Reduzir as emissões de gases poluentes associados à agricultura e que causam efeito estufa.</li>
 
-     <dark><li class="item-lista"> Proteção de Recursos Naturais: </li></dark>
+     <li class="item-lista"> Proteção de Recursos Naturais: </li>
         <li class="item-texto"> Garantir que recursos naturais, como solo, água e biodiversidade, sejam utilizados de maneira responsável e sem prejudicar o futuro.</li>
-
+    </dark>
     </ul>
 
 </body>
