--- a/index.html
+++ b/index.html
@@ -25,7 +25,7 @@
 </center>
 <center> <img class="imagem" src="imagens/agricultura.jpeg"></center>
 
-    <h3 class="subtitulo">PRINCIPAIS ASPECTOS E OBJETIVOS DA AGRICULTURA SUSTENTÁVEL:</h3>
+    <h3 class="subtitulo">PRINCIPAIS OBJETIVOS DA AGRICULTURA SUSTENTÁVEL:</h3>
     <ul class="lista-item">
         <dark>
      <li class="item-lista"> Desenvolvimento Rural: </li>
