--- a/tecnologia.html
+++ b/tecnologia.html
@@ -9,9 +9,25 @@
 <body class="corpo">
 
     <h1 class="titulo"> TECNOLOGIA E AGRICULTURA </h1>
-    <p class="paragrafo">A agricultura vem se revolucionando nos últimos anos, com muitas máuinas e tecnologias envolvidas, dentre elas:</p>
+    <p class="paragrafo">A agricultura vem se revolucionando nos últimos anos, com muitas máquinas e tecnologias envolvidas, dentre elas:</p>
   
     <h2 class="subtitulo">NOVAS TECNOLOGIAS NA AGRICULTURA:</h2>
+
+    <ul class="lista">
+        <li class="item-lista">IRRIGAÇÃO INTELIGENTE</li>
+
+        <li class="item-lista">BIOTECNOLOGIA</li>
+
+        <li class="item-lista">AGRICULTURA VERTICAL E HIDROPÔNICA</li>
+
+        <li class="item-lista">ROBÓTICA E AUTOMAÇÃO</li>
+
+        <li class="item-lista">TECNOLOGIAS DE INFORMAÇÃO E COMUNICAÇÃO</li>
+
+        <li class="item-lista">ENERGIAS RENOVÁVEIS</li>
+
+        <li class="item-lista">SISTEMAS DE MONITORAMENTO</li>
+    </ul>
 
 </body>
 </html>
