--- a/tecnologia.html
+++ b/tecnologia.html
@@ -28,6 +28,22 @@
 
         <li class="item-lista">SISTEMAS DE MONITORAMENTO</li>
     </ul>
+    
+    <h2 class="titulo2">IRRIGAÇÃO INTELIGENTE</h2>
+    <ul>
+    <li><h3 class="titulo3">GOTEJAMENTO:</h3>
+    <p class="paragrafos"> Fornece água diretamente às raízes das plantas, agindo de forma com que reduz o desperdício e melhora a eficiência. </p></li>
+   
+    <li> <h3>SENSORES DE UMIDADE;</h3>
+    <p class="paragrafos"> Servem para ajustar de forma automática a quantidade de água com base em necessidades das plantas. </p></li>
+
+    <li> <h3>SISTEMAS DE IRRIGAÇÃO AUTOMATIZADOS:</h3>
+        <p class="paragrafos">Controlam a irrigação de forma em que se é baseado nos dados em tempo real e previsões do tempo. </p></li>
+</ul>
+
+
+
+
 
 </body>
 </html>
