--- a/tecnologia.html
+++ b/tecnologia.html
@@ -34,13 +34,32 @@
     <li><h3 class="titulo3">GOTEJAMENTO:</h3>
     <p class="paragrafos"> Fornece água diretamente às raízes das plantas, agindo de forma com que reduz o desperdício e melhora a eficiência. </p></li>
    
-    <li> <h3>SENSORES DE UMIDADE;</h3>
+    <li> <h3>SENSORES DE UMIDADE:</h3>
     <p class="paragrafos"> Servem para ajustar de forma automática a quantidade de água com base em necessidades das plantas. </p></li>
 
     <li> <h3>SISTEMAS DE IRRIGAÇÃO AUTOMATIZADOS:</h3>
         <p class="paragrafos">Controlam a irrigação de forma em que se é baseado nos dados em tempo real e previsões do tempo. </p></li>
 </ul>
 
+
+<h2 class="titulo2">BIOTECNOLOGIA</h2>
+    <ul>
+    <li><h3 class="titulo3">VARIEDADES RESILIENTES:</h3>
+    <p class="paragrafos">Desenvolvidas para terem maior resistência a pragas, doenças e demais condições climáticas. </p></li>
+   
+    <li> <h3>CULTURAS BIOFORTIFICADAS:</h3>
+    <p class="paragrafos">Enriquecidas com nutrientes para obter uma melhora na qualidade nutricional.</p></li>
+    </ul>
+
+
+    <h2 class="titulo2">AGRICULTURA VERTICAL E HIDROPÔNICA</h2>
+    <ul>
+    <li><h3 class="titulo3">FAZENDAS VERTICAIS:</h3>
+    <p class="paragrafos">Desenvolvidas para terem maior resistência a pragas, doenças e demais condições climáticas. </p></li>
+   
+    <li> <h3>CULTURAS BIOFORTIFICADAS:</h3>
+    <p class="paragrafos">Enriquecidas com nutrientes para obter uma melhora na qualidade nutricional.</p></li>
+    </ul>
 
 
 
