--- a/tecnologia.html
+++ b/tecnologia.html
@@ -55,11 +55,15 @@
     <h2 class="titulo2">AGRICULTURA VERTICAL E HIDROPÔNICA</h2>
     <ul>
     <li><h3 class="titulo3">FAZENDAS VERTICAIS:</h3>
-    <p class="paragrafos">Desenvolvidas para terem maior resistência a pragas, doenças e demais condições climáticas. </p></li>
+    <p class="paragrafos">Utilizam espaços verticais em abientes controlados para ter a opção de cultivar alimentos em áreas urbanas.</p></li>
    
-    <li> <h3>CULTURAS BIOFORTIFICADAS:</h3>
-    <p class="paragrafos">Enriquecidas com nutrientes para obter uma melhora na qualidade nutricional.</p></li>
-    </ul>
+    <li> <h3>HIDROPONIA:</h3>
+    <p class="paragrafos"> Cultivo de forma onde não se usa o solo, sendo assim, é feito em estufas onde o solo é substituído por uma solução aquosa muito rica em proteínas e nutrientes.</p></li>
+
+    <li> <h3>AEROPONIA:</h3>
+        <p class="paragrafos">É o cultivo de plantas em um ambiente aéreo, com raízes dispostas de forma suspensa e expostas a uma névoa nutritiva.</p></li>
+
+        </ul>
 
 
 
