--- a/tecnologia.html
+++ b/tecnologia.html
@@ -29,38 +29,38 @@
         <li class="item-lista">SISTEMAS DE MONITORAMENTO</li>
     </ul>
     
-    <h2 class="titulo2">IRRIGAÇÃO INTELIGENTE</h2>
+    <center> <h2 class="titulo2">IRRIGAÇÃO INTELIGENTE</h2></center>
     <ul>
-    <li><h3 class="titulo3">GOTEJAMENTO:</h3>
+   <li> <h3 class="titulo3">GOTEJAMENTO:</h3>
     <p class="paragrafos"> Fornece água diretamente às raízes das plantas, agindo de forma com que reduz o desperdício e melhora a eficiência. </p></li>
    
-    <li> <h3 class="titulo3">SENSORES DE UMIDADE:</h3>
+    <li><h3 class="titulo3">SENSORES DE UMIDADE:</h3>
     <p class="paragrafos"> Servem para ajustar de forma automática a quantidade de água com base em necessidades das plantas. </p></li>
 
-    <li> <h3 class="titulo3" >SISTEMAS DE IRRIGAÇÃO AUTOMATIZADOS:</h3>
+    <li><h3 class="titulo3" >SISTEMAS DE IRRIGAÇÃO AUTOMATIZADOS:</h3>
         <p class="paragrafos">Controlam a irrigação de forma em que se é baseado nos dados em tempo real e previsões do tempo. </p></li>
 </ul>
 
 
-<h2 class="titulo2">BIOTECNOLOGIA</h2>
+  <center> <h2 class="titulo2">BIOTECNOLOGIA</h2></center>
     <ul>
     <li><h3 class="titulo3">VARIEDADES RESILIENTES:</h3>
     <p class="paragrafos">Desenvolvidas para terem maior resistência a pragas, doenças e demais condições climáticas. </p></li>
    
-    <li> <h3 class="titulo3" >CULTURAS BIOFORTIFICADAS:</h3>
+    <li><h3 class="titulo3" >CULTURAS BIOFORTIFICADAS:</h3>
     <p class="paragrafos">Enriquecidas com nutrientes para obter uma melhora na qualidade nutricional.</p></li>
     </ul>
 
 
-    <h2 class="titulo2">AGRICULTURA VERTICAL E HIDROPÔNICA</h2>
+    <center><h2 class="titulo2">AGRICULTURA VERTICAL E HIDROPÔNICA</h2></center>
     <ul>
     <li><h3 class="titulo3">FAZENDAS VERTICAIS:</h3>
     <p class="paragrafos">Utilizam espaços verticais em abientes controlados para ter a opção de cultivar alimentos em áreas urbanas.</p></li>
    
-    <li> <h3 class="titulo3" >HIDROPONIA:</h3>
+    <li><h3 class="titulo3" >HIDROPONIA:</h3>
     <p class="paragrafos"> Cultivo de forma onde não se usa o solo, sendo assim, é feito em estufas onde o solo é substituído por uma solução aquosa muito rica em proteínas e nutrientes.</p></li>
 
-    <li> <h3 class="titulo3" >AEROPONIA:</h3>
+    <li><h3 class="titulo3" >AEROPONIA:</h3>
         <p class="paragrafos">É o cultivo de plantas em um ambiente aéreo, com raízes dispostas de forma suspensa e expostas a uma névoa nutritiva.</p></li>
 
         </ul>
