--- a/tecnologia.html
+++ b/tecnologia.html
@@ -22,8 +22,6 @@
 
         <li class="item-lista">ROBÓTICA E AUTOMAÇÃO</li>
 
-        <li class="item-lista">TECNOLOGIAS DE INFORMAÇÃO E COMUNICAÇÃO</li>
-
         <li class="item-lista">ENERGIAS RENOVÁVEIS</li>
 
         <li class="item-lista">SISTEMAS DE MONITORAMENTO</li>
@@ -62,11 +60,34 @@
 
     <li><h3 class="titulo3" >AEROPONIA:</h3>
         <p class="paragrafos">É o cultivo de plantas em um ambiente aéreo, com raízes dispostas de forma suspensa e expostas a uma névoa nutritiva.</p></li>
-
         </ul>
 
+        <center><h2 class="titulo2">ROBÓTICA E AUTOMAÇÃO</h2></center>
+    <ul>
+    <li><h3 class="titulo3">TRATORES AUTÔNOMOS:</h3>
+    <p class="paragrafos">Operam sem nenhuma intervenção humana, realizando tarefas como plantio, colheita e manejo do solo.</p></li>
+   
+    <li><h3 class="titulo3" >ROBÔS DE COLHEITA:</h3>
+    <p class="paragrafos">Equipamentos que colhem frutas e vegetais com precisão, de uma forma que reduz a necessidade do trabalho manual.</p></li>
+    </ul>
 
+    <center><h2 class="titulo2">ENERGIAS RENOVÁVEIS</h2></center>
+    <ul>
+    <li><h3 class="titulo3">ENERGIA SOLAR:</h3>
+    <p class="paragrafos"></p>Utiliza painéis solares que fornecem energia para operações agrícolas e sistemas de irrigação. </li>
+   
+    <li><h3 class="titulo3">ENERGIA EÓLICA:</h3>
+    <p class="paragrafos">Usa da força do vento para gerar energia em áreas rurais.</p></li>
+    </ul>
 
+    <center><h2 class="titulo2">SISTEMAS DE MONITORAMENTO</h2></center>
+    <ul>
+    <li><h3 class="titulo3">RASTREAMENTO DE PRODUTOS:</h3>
+    <p class="paragrafos">Utiliza blockchain para garantir a transparência e rastreabilidade dos alimentos, desde a produção até o consumidor.</p></li>
+   
+    <li><h3 class="titulo3">MONITORAMENTO EM TEMPO REAL:</h3>
+    <p class="paragrafos">Permite acompanhar continuamente as condições das culturas e da saúde do solo.</p></li>
+    </ul>
 
 </body>
 </html>
