--- a/inicio.html
+++ b/inicio.html
@@ -8,7 +8,7 @@
 </head>
 <body class="corpo">
 
-    <h1 class="titulo">PLANTAÇÃO DE ALFACES BASEADA EM AGRICULTURA ORGÂNICA E SUSTENTÁVEL</h1>
+    <center><h1 class="titulo">PLANTAÇÃO DE ALFACES BASEADA EM AGRICULTURA ORGÂNICA E SUSTENTÁVEL</h1></center>
    <center><img class="imagem" src="imagens/restinga.png"> 
 
     <h2 class="titulo2"> Foto registrada durante uma viagem para Lapa/PR - Quilombo de Restinga -</h2>
