--- a/sugestoes.html
+++ b/sugestoes.html
@@ -6,7 +6,49 @@
     <title>AGRICULTURA SUSTENTÁVEL</title>
     <link rel="stylesheet" href="sugestoes.css">
 </head>
-<body class="corpo">
+<body>
+    <header>
+        <h1>Agricultura Sustentável</h1>
+    </header>
+    
+    <div class="container">
+        <section>
+            <h2>O que é Agricultura Sustentável?</h2>
+            <p>A agricultura sustentável é um método de cultivo que visa atender às necessidades alimentares atuais sem comprometer a capacidade das futuras gerações de atender às suas próprias necessidades. Ela busca manter a saúde do solo, proteger o meio ambiente e promover o bem-estar social e econômico.</p>
+        </section>
+
+        <section>
+            <h2>Práticas Sustentáveis</h2>
+            <ul>
+                <li><strong>Rotação de Culturas:</strong> Alternar as culturas cultivadas em um mesmo campo para melhorar a saúde do solo e reduzir pragas.</li>
+                <li><strong>Compostagem:</strong> Utilizar resíduos orgânicos para criar adubo, melhorando a fertilidade do solo.</li>
+                <li><strong>Uso Racional da Água:</strong> Implementar sistemas de irrigação eficientes para economizar água e reduzir o desperdício.</li>
+                <li><strong>Controle Biológico:</strong> Utilizar predadores naturais para controlar pragas, reduzindo a necessidade de pesticidas químicos.</li>
+                <li><strong>Plantio de Cobertura:</strong> Cultivar plantas que protejam o solo e ajudem a evitar a erosão.</li>
+            </ul>
+        </section>
+
+        <section>
+            <h2>Benefícios da Agricultura Sustentável</h2>
+            <ul>
+                <li><strong>Saúde do Solo:</strong> Melhora a estrutura e a fertilidade do solo, promovendo uma produção agrícola mais robusta e duradoura.</li>
+                <li><strong>Redução da Poluição:</strong> Diminui o uso de produtos químicos e preserva a qualidade da água e do ar.</li>
+                <li><strong>Conservação da Biodiversidade:</strong> Protege e promove a diversidade de plantas e animais no ambiente agrícola.</li>
+                <li><strong>Benefícios Econômicos:</strong> Reduz os custos com insumos e pode aumentar a rentabilidade a longo prazo.</li>
+                <li><strong>Saúde Humana:</strong> Oferece alimentos mais saudáveis e reduz o risco de exposição a produtos químicos nocivos.</li>
+            </ul>
+        </section>
+
+        <section>
+            <h2>Dicas para Começar</h2>
+            <ul>
+                <li><strong>Educação e Planejamento:</strong> Informe-se sobre práticas sustentáveis e planeje como integrá-las em sua propriedade.</li>
+                <li><strong>Comece Pequeno:</strong> Experimente práticas sustentáveis em uma parte menor de sua propriedade antes de expandir.</li>
+                <li><strong>Busque Recursos e Apoio:</strong> Utilize recursos disponíveis online, participe de grupos e procure apoio de especialistas em agricultura sustentável.</li>
+                <li><strong>Monitoramento e Ajustes:</strong> Acompanhe o desempenho das práticas implementadas e esteja disposto a fazer ajustes conforme necessário.</li>
+            </ul>
+        </section>
+    </div>
 
 </body>
 </html>
