--- a/inicio.html
+++ b/inicio.html
@@ -13,7 +13,7 @@
 
     <h2 class="titulo2"> Foto registrada durante uma viagem para Lapa/PR - Quilombo de Restinga -</h2>
     
-    <p class="paragrafo">O território quilombola da Lapa é composto por três comunidades distintas: Feixo, Restinga e Vila Esperança, todas localizadas na mesma região. Em particular, a comunidade de Restinga se destaca pela sua plantação ser baseada na agricultura sustentável e orgânica. Uma família residente dessa comunidade possui uma plantação de aproximadamente 1 hectare, utilizando práticas agrícolas que respeitam o meio ambiente e promovem a saúde do solo. Além de garantir alimentos mais saudáveis e nutritivos para a família, uma parte significativa da produção é destinada às escolas da região.</p>
+    <p class="paragrafo">O território quilombola da Lapa é composto por três comunidades distintas: Feixo, Restinga e Vila Esperança, todas localizadas na mesma região. Em particular, a comunidade de Restinga se destaca pela sua plantação ser baseada na agricultura sustentável e orgânica. Uma família residente dessa comunidade possui uma plantação de aproximadamente 1 hectare, utilizando práticas agrícolas que respeitam o meio ambiente e promovem a saúde do solo, como o cultivo de cobertura. Além de garantir alimentos mais saudáveis e nutritivos para a família, uma parte significativa da produção é destinada às escolas da região.</p>
     
 
 </body>
