--- a/sugestoes.html
+++ b/sugestoes.html
@@ -8,5 +8,43 @@
 </head>
 <body>
     
+    <h2 class="titulo2"> ROTAÇÃO DE CULTURAS:</h2>
+    <p class="paragrafo">Altera os tipos de culturas plantafas em um campo ao longo do tempo, o que faz com que melhore a saúde do solo e reduza a incidência de pragas e doenças.</p>
+<br><br>
+
+    <h2 class="titulo2"> PLANTIO DIRETO:</h2>
+    <p class="paragrafo"> Semear diretamente no solo sem a necessidade de arar faz com que o solo seja mais conservado, reduz as erosões e melhora na retenção da água.</p>
+<br><br>
+
+    <h2 class="titulo2"> USO DE ADUBOS ORGÂNICOS:</h2>
+    <p class="paragrafo">Investir em adubos orgânicos, como o esterco e outros nutrientes podem ajudar a enriquecer mais o solo e de uma forma natural.</p>
+<br><br>
+<h2 class="titulo2">CULTIVO DE COBERTURA:</h2>
+    <p class="paragrafo">Pode-se plantar culturas de cobertura, como leguminosas, que ajudam a proteger melhor o solo, melhorar a sua fertilidade e reduzir a erosão.</p>
+    <br><br>
+
+    <h2 class="titulo2">USO EFICIENTE DE ÁGUA:</h2>
+    <p class="paragrafo"></p>
+<br><br>
+
+    <h2 class="titulo2">AGROFLORESTAMENTO</h2>
+    <p class="paragrafo"></p>
+    <br><br>
+
+    <h2 class="titulo2">CONSERVAÇÃO DO SOLO:</h2>
+    <p class="paragrafo"></p>
+    <br><br>
+
+    <h2 class="titulo2">USO DE TECNOLOGIAS DE PRECISÃO:</h2>
+    <p class="paragrafo"></p>
+    <br><br>
+
+    <h2 class="titulo2">EDUCAÇÃO E TREINAMENTO:</h2>
+    <p class="paragrafo"></p>
+    <br><br>
+
+
+
+
 </body>
 </html>
