--- a/sugestoes.html
+++ b/sugestoes.html
@@ -24,11 +24,11 @@
     <br><br>
 
     <h2 class="titulo2">USO EFICIENTE DE ÁGUA:</h2>
-    <p class="paragrafo"></p>
+    <p class="paragrafo">Adotar técnicas de irrigação mais eficientes, como o gotejamento e sistemas de captação de água da chuva podem reduzir o desperdício e melhorar a gestão de recursos hídricos.</p>
 <br><br>
 
     <h2 class="titulo2">AGROFLORESTAMENTO</h2>
-    <p class="paragrafo"></p>
+    <p class="paragrafo">Integrar árvores e arbustos nas áreas de cultivo é uma boa alternativa, pois melhora a biodiversidade e protege o solo. </p>
     <br><br>
 
     <h2 class="titulo2">CONSERVAÇÃO DO SOLO:</h2>
