--- a/sugestoes.html
+++ b/sugestoes.html
@@ -6,8 +6,8 @@
     <title>AGRICULTURA SUSTENTÁVEL</title>
     <link rel="stylesheet" href="sugestoes.css">
 </head>
-<body>
-    
+<body class="corpo">
+    <center>
     <h2 class="titulo2"> ROTAÇÃO DE CULTURAS:</h2>
     <p class="paragrafo">Altera os tipos de culturas plantafas em um campo ao longo do tempo, o que faz com que melhore a saúde do solo e reduza a incidência de pragas e doenças.</p>
 <br><br>
@@ -42,7 +42,7 @@
     <h2 class="titulo2">EDUCAÇÃO E TREINAMENTO:</h2>
     <p class="paragrafo"></p>
     <br><br>
-
+</center>
 
 
 
