--- a/sugestoes.html
+++ b/sugestoes.html
@@ -31,16 +31,12 @@
     <p class="paragrafo">Integrar árvores e arbustos nas áreas de cultivo é uma boa alternativa, pois melhora a biodiversidade e protege o solo. </p>
     <br><br>
 
-    <h2 class="titulo2">CONSERVAÇÃO DO SOLO:</h2>
-    <p class="paragrafo"></p>
-    <br><br>
-
     <h2 class="titulo2">USO DE TECNOLOGIAS DE PRECISÃO:</h2>
-    <p class="paragrafo"></p>
+    <p class="paragrafo"> Empregar tecnologias avançadas, como sensores e drones, de forma com que monitorem e gerenciem as práticas agrícolas com maior precisão e eficiência.</p>
     <br><br>
 
     <h2 class="titulo2">EDUCAÇÃO E TREINAMENTO:</h2>
-    <p class="paragrafo"></p>
+    <p class="paragrafo">Ter maior investimento na capacitação de agricultores para que adotem práticas mais sustentáveis e compreendam melhor os impactos de suas atividades no meio ambiente também é uma boa opção.</p>
     <br><br>
 </center>
 
