--- a/sugestoes.html
+++ b/sugestoes.html
@@ -6,6 +6,11 @@
     <title>AGRICULTURA SUSTENTÁVEL</title>
     <link rel="stylesheet" href="sugestoes.css">
 </head>
+<header>
+<h1 class="titulo"></h1>
+<p paragrafos> A agricultura sustentável vem se inovando cada vez mais e por ser uma prática inovadora muitos ainda não a adotaram, pois não tem conhecimento o suficiente sobre ela, mas aqui estão algumas sugestões que mostram que não há nada de complicado nesta prática de cultivo.</p>
+</header>
+
 <body class="corpo">
     <center>
     <h2 class="titulo2"> ROTAÇÃO DE CULTURAS:</h2>
