--- a/sugestoes.html
+++ b/sugestoes.html
@@ -7,8 +7,8 @@
     <link rel="stylesheet" href="sugestoes.css">
 </head>
 <header>
-<h1 class="titulo"></h1>
-<p paragrafos> A agricultura sustentável vem se inovando cada vez mais e por ser uma prática inovadora muitos ainda não a adotaram, pois não tem conhecimento o suficiente sobre ela, mas aqui estão algumas sugestões que mostram que não há nada de complicado nesta prática de cultivo.</p>
+<h1 class="titulo"> A AGRICULTURA SUSTENTÁVEL É REALMENTE DIFÍCIL?</h1>
+<p class="paragrafos"> A agricultura sustentável vem se inovando cada vez mais e por ser uma prática inovadora muitos ainda não a adotaram, pois não tem conhecimento o suficiente sobre ela, mas aqui estão algumas sugestões que mostram que não há nada de tão complicado nesta prática de cultivo.</p>
 </header>
 
 <body class="corpo">
