--- a/sugestoes.html
+++ b/sugestoes.html
@@ -6,10 +6,10 @@
     <title>AGRICULTURA SUSTENTÁVEL</title>
     <link rel="stylesheet" href="sugestoes.css">
 </head>
-<header>
+<header class="cabecalho"><center>
 <h1 class="titulo"> A AGRICULTURA SUSTENTÁVEL É REALMENTE DIFÍCIL?</h1>
 <p class="paragrafos"> A agricultura sustentável vem se inovando cada vez mais e por ser uma prática inovadora muitos ainda não a adotaram, pois não tem conhecimento o suficiente sobre ela, mas aqui estão algumas sugestões que mostram que não há nada de tão complicado nesta prática de cultivo.</p>
-</header>
+</center></header>
 
 <body class="corpo">
     <center>
