--- a/sugestoes.html
+++ b/sugestoes.html
@@ -34,9 +34,10 @@
     <p class="paragrafo">Adotar técnicas de irrigação mais eficientes, como o gotejamento e sistemas de captação de água da chuva podem reduzir o desperdício e melhorar a gestão de recursos hídricos.</p>
 <br><br>
 
-    <h2 class="titulo2">AGROFLORESTAMENTO</h2>
+    
+    <a href="imagens/agro.mp4"> <h2 class="titulo2">AGROFLORESTAMENTO</h2></a>
     <p class="paragrafo">Integrar árvores e arbustos nas áreas de cultivo é uma boa alternativa, pois melhora a biodiversidade e protege o solo. </p>
-   <img class="imagem" src="agro.mp4">
+   
     <br><br>
 
     <h2 class="titulo2">USO DE TECNOLOGIAS DE PRECISÃO:</h2>
