--- a/sugestoes.html
+++ b/sugestoes.html
@@ -37,7 +37,7 @@
     
     <h2 class="titulo2">AGROFLORESTAMENTO</h2>
     <p class="paragrafo">Integrar árvores e arbustos nas áreas de cultivo é uma boa alternativa, pois melhora a biodiversidade e protege o solo. </p>
-    <video width="320" height="240" controls>
+    <video class="imagem">
         <source src="imagens/agro.mp4" type="video/mp4">
     </video>
     <br><br>
