--- a/sugestoes.html
+++ b/sugestoes.html
@@ -35,7 +35,7 @@
 <br><br>
 
     
-    <h2 class="titulo2">AGROFLORESTAMENTO</h2>
+    <a href="imagens/agro.mp4"><h2 class="titulo2">AGROFLORESTAMENTO</h2></a>
     <p class="paragrafo">Integrar árvores e arbustos nas áreas de cultivo é uma boa alternativa, pois melhora a biodiversidade e protege o solo. </p>
     <video class="imagem">
         <source src="imagens/agro.mp4" type="video/mp4">
