--- a/sugestoes.html
+++ b/sugestoes.html
@@ -35,11 +35,11 @@
 <br><br>
 
     
-    <a href="imagens/agro.mp4"><h2 class="titulo2">AGROFLORESTAMENTO</h2></a>
+   <h2 class="titulo2">AGROFLORESTAMENTO</h2>
     <p class="paragrafo">Integrar árvores e arbustos nas áreas de cultivo é uma boa alternativa, pois melhora a biodiversidade e protege o solo. </p>
-    <video class="imagem">
+    <a href="imagens/agro.mp4"><video class="imagem">
         <source src="imagens/agro.mp4" type="video/mp4">
-    </video>
+    </video> </a> 
     <br><br>
 
     <h2 class="titulo2">USO DE TECNOLOGIAS DE PRECISÃO:</h2>
