--- a/sugestoes.html
+++ b/sugestoes.html
@@ -37,8 +37,8 @@
     
    <h2 class="titulo2">AGROFLORESTAMENTO</h2>
     <p class="paragrafo">Integrar árvores e arbustos nas áreas de cultivo é uma boa alternativa, pois melhora a biodiversidade e protege o solo. </p>
-    <a href="imagens/agro.mp4"><video class="imagem">
-        <source src="imagens/agro.mp4" type="video/mp4">
+    <a href="imagens/agroreflorestamento.mp4"><video class="imagem">
+        <source src="imagens/agroreflorestamento.mp4" type="video/mp4">
     </video> </a> 
     <br><br>
 
