--- a/index.html
+++ b/index.html
@@ -23,7 +23,7 @@
 <center><h2 class="titulo2"> DO QUE SE TRATA A AGRICULTURA SUSTENTÁVEL? </h2>
     <p class="paragrafo">A agricultura sustentável é um conceito e prática que visa produzir alimentos, fibras, combustíveis e outros produtos agrícolas de maneira que sejam ecologicamente corretos, economicamente viáveis e socialmente responsáveis. O objetivo central é atender às necessidades atuais sem comprometer a capacidade das futuras gerações de atenderem às suas próprias necessidades.</p>
 </center>
-<center> <img class="imagem" src="imagens/agricultura.jpeg"></center>
+<center> <img class="imagem" src="imagens/sustentabilidade.jpeg"></center>
 
     <h3 class="subtitulo">PRINCIPAIS OBJETIVOS DA AGRICULTURA SUSTENTÁVEL:</h3>
     <ul class="lista-item">
