--- a/sugestoes.html
+++ b/sugestoes.html
@@ -21,13 +21,16 @@
 
     <h2 class="titulo2"> PLANTIO DIRETO:</h2>
     <p class="paragrafo"> Semear diretamente no solo sem a necessidade de arar faz com que o solo seja mais conservado, reduz as erosões e melhora na retenção da água.</p>
-<br><br>
+    <img src="imagens/semente.jpeg">
+    <br><br>
 
     <h2 class="titulo2"> USO DE ADUBOS ORGÂNICOS:</h2>
     <p class="paragrafo">Investir em adubos orgânicos, como o esterco e outros nutrientes podem ajudar a enriquecer mais o solo e de uma forma natural.</p>
 <br><br>
+
 <h2 class="titulo2">CULTIVO DE COBERTURA:</h2>
     <p class="paragrafo">Pode-se plantar culturas de cobertura, como leguminosas, que ajudam a proteger melhor o solo, melhorar a sua fertilidade e reduzir a erosão.</p>
+    <img src="imagens/forracao.jpeg">
     <br><br>
 
     <h2 class="titulo2">USO EFICIENTE DE ÁGUA:</h2>
@@ -37,13 +40,11 @@
     
    <h2 class="titulo2">AGROFLORESTAMENTO</h2>
     <p class="paragrafo">Integrar árvores e arbustos nas áreas de cultivo é uma boa alternativa, pois melhora a biodiversidade e protege o solo. </p>
-    <a href="agroreflorestamento.mp4"><video class="imagem">
-        <source src="agroreflorestamento.mp4" type="video/mp4">
-    </video> </a> 
-    <br><br>
+    <img src="imagens/agro.jpeg">
 
     <h2 class="titulo2">USO DE TECNOLOGIAS DE PRECISÃO:</h2>
     <p class="paragrafo"> Empregar tecnologias avançadas, como sensores e drones, de forma com que monitorem e gerenciem as práticas agrícolas com maior precisão e eficiência.</p>
+    <img src="imagens/drone.jpeg">
     <br><br>
 
     <h2 class="titulo2">EDUCAÇÃO E TREINAMENTO:</h2>
