--- a/sugestoes.html
+++ b/sugestoes.html
@@ -21,7 +21,7 @@
 
     <h2 class="titulo2"> PLANTIO DIRETO:</h2>
     <p class="paragrafo"> Semear diretamente no solo sem a necessidade de arar faz com que o solo seja mais conservado, reduz as erosões e melhora na retenção da água.</p>
-    <img src="imagens/semente.jpeg">
+    <img class="imagem" src="imagens/semente.jpeg">
     <br><br>
 
     <h2 class="titulo2"> USO DE ADUBOS ORGÂNICOS:</h2>
@@ -30,7 +30,7 @@
 
 <h2 class="titulo2">CULTIVO DE COBERTURA:</h2>
     <p class="paragrafo">Pode-se plantar culturas de cobertura, como leguminosas, que ajudam a proteger melhor o solo, melhorar a sua fertilidade e reduzir a erosão.</p>
-    <img src="imagens/forracao.jpeg">
+    <img class="imagem" src="imagens/forracao.jpeg">
     <br><br>
 
     <h2 class="titulo2">USO EFICIENTE DE ÁGUA:</h2>
@@ -40,11 +40,11 @@
     
    <h2 class="titulo2">AGROFLORESTAMENTO</h2>
     <p class="paragrafo">Integrar árvores e arbustos nas áreas de cultivo é uma boa alternativa, pois melhora a biodiversidade e protege o solo. </p>
-    <img src="imagens/agro.jpeg">
+    <img class="imagem" src="imagens/agro.jpeg">
 
     <h2 class="titulo2">USO DE TECNOLOGIAS DE PRECISÃO:</h2>
     <p class="paragrafo"> Empregar tecnologias avançadas, como sensores e drones, de forma com que monitorem e gerenciem as práticas agrícolas com maior precisão e eficiência.</p>
-    <img src="imagens/drone.jpeg">
+    <img class="imagem" src="imagens/drone.jpeg">
     <br><br>
 
     <h2 class="titulo2">EDUCAÇÃO E TREINAMENTO:</h2>
