--- a/sugestoes.html
+++ b/sugestoes.html
@@ -16,7 +16,7 @@
     <center>
        
     <h2 class="titulo2"> ROTAÇÃO DE CULTURAS:</h2>
-    <p class="paragrafo">Altera os tipos de culturas plantafas em um campo ao longo do tempo, o que faz com que melhore a saúde do solo e reduza a incidência de pragas e doenças.</p>
+    <p class="paragrafo">Altera os tipos de culturas plantadas em um campo ao longo do tempo, o que faz com que melhore a saúde do solo e reduza a incidência de pragas e doenças.</p>
 <br><br>
 
     <h2 class="titulo2"> PLANTIO DIRETO:</h2>
