--- a/sugestoes.html
+++ b/sugestoes.html
@@ -17,7 +17,8 @@
        
     <h2 class="titulo2"> ROTAÇÃO DE CULTURAS:</h2>
     <p class="paragrafo">Altera os tipos de culturas plantadas em um campo ao longo do tempo, o que faz com que melhore a saúde do solo e reduza a incidência de pragas e doenças.</p>
-<br><br>
+    <img class="imagem" src="imagens/rotacao.jpeg">
+    <br><br>
 
     <h2 class="titulo2"> PLANTIO DIRETO:</h2>
     <p class="paragrafo"> Semear diretamente no solo sem a necessidade de arar faz com que o solo seja mais conservado, reduz as erosões e melhora na retenção da água.</p>
@@ -26,7 +27,8 @@
 
     <h2 class="titulo2"> USO DE ADUBOS ORGÂNICOS:</h2>
     <p class="paragrafo">Investir em adubos orgânicos, como o esterco e outros nutrientes podem ajudar a enriquecer mais o solo e de uma forma natural.</p>
-<br><br>
+    <img class="imagem" src="imagens/adubo.jpeg">
+    <br><br>
 
 <h2 class="titulo2">CULTIVO DE COBERTURA:</h2>
     <p class="paragrafo">Pode-se plantar culturas de cobertura, como leguminosas, que ajudam a proteger melhor o solo, melhorar a sua fertilidade e reduzir a erosão.</p>
@@ -35,7 +37,8 @@
 
     <h2 class="titulo2">USO EFICIENTE DE ÁGUA:</h2>
     <p class="paragrafo">Adotar técnicas de irrigação mais eficientes, como o gotejamento e sistemas de captação de água da chuva podem reduzir o desperdício e melhorar a gestão de recursos hídricos.</p>
-<br><br>
+    <img class="imagem" src="imagens/agua.jpeg">
+    <br><br>
 
     
    <h2 class="titulo2">AGROFLORESTAMENTO</h2>
