--- a/inicio.html
+++ b/inicio.html
@@ -7,8 +7,8 @@
     <link rel="stylesheet" href="inicio.css">
 </head>
 <body class="corpo">
-
-    <center><h1 class="titulo">PLANTAÇÃO DE ALFACES BASEADA EM AGRICULTURA ORGÂNICA E SUSTENTÁVEL</h1></center>
+<header class="cabecalho">
+    <center><h1 class="titulo">PLANTAÇÃO DE ALFACES BASEADA EM AGRICULTURA ORGÂNICA E SUSTENTÁVEL</h1></center></header>
    <center><img class="imagem" src="imagens/restinga.png"> 
 
     <h2 class="titulo2"> Foto registrada durante uma viagem para Lapa/PR - Quilombo de Restinga -</h2>
