--- a/index.html
+++ b/index.html
@@ -21,7 +21,7 @@
 
 <br><br><br>
 <center><h2 class="titulo2"> DO QUE SE TRATA A AGRICULTURA SUSTENTÁVEL? </h2>
-    <p class="paragrafo">A agricultura sustentável é um conceito e prática que visa produzir alimentos, fibras, combustíveis e outros produtos agrícolas de maneira que sejam ecologicamente corretos, economicamente viáveis e socialmente responsáveis. O objetivo central é atender às necessidades atuais sem comprometer a capacidade das futuras gerações de atenderem às suas próprias necessidades.</p>
+    <p class="paragrafo">A agricultura sustentável é um conceito e prática que visa produzir alimentos, fibras, combustíveis e outros produtos agrícolas de maneira que sejam ecologicamente corretos, economicamente viáveis e socialmente responsáveis. O objetivo central é atender às necessidades atuais sem comprometer a capacidade das futuras gerações de atenderem às suas próprias necessidades. A agricultura sustentável é uma abordagem inovadora e essencial para garantir que a produção de alimentos possa atender às necessidades atuais sem comprometer a capacidade das futuras gerações de atenderem às suas próprias necessidades. O objetivo é existirem práticas agrícolas que não apenas aumentem a produtividade, mas também respeitem e preservem o meio ambiente. Ao adotar métodos que preservam os recursos naturais, melhoram a saúde do solo e incentivam a biodiversidade, é possível obter um futuro mais equilibrado e seguro para todos. Ao explorar e implementar essas práticas, você não apenas faz parte de uma mudança positiva, mas também ajuda a criar um impacto duradouro no nosso planeta.</p>
 </center>
 <center> <img class="imagem" src="imagens/sustentabilidade.jpeg"></center>
 
